fixed navbar where content is hidden behind it

--- a/public/style.css
+++ b/public/style.css
@@ -63,3 +63,7 @@
   justify-content: center;
   align-items: center;
 }
+
+.css-jz7rmq-MuiPaper-root-MuiAppBar-root {
+  position: none;
+}
